[package]
name = "hpk"
version = "0.3.4"
description = "HPK archiver for Haemimont Engine game files (Tropico 3-5, Omerta, Victor Vran, Surviving Mars etc.)"
readme = "README.md"
repository = "https://github.com/nickelc/hpk"
license = "GPL-3.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["archive", "hpk"]
categories = ["command-line-utilities"]
edition = "2018"

[features]
lz4frame = ["lz4"]

[lib]
name = "hpk"
path = "src/hpk/mod.rs"

[[bin]]
name = "hpk"
path = "src/main.rs"

[dependencies]
byteorder = "1"
filetime = "0.2"
flate2 = "1"
glob="0.2"
lz4-compress="0.1"
nom="4"
walkdir="2"
tempfile="3"
zstd = "0.4.22"

[dependencies.clap]
default-features = false
version = "^2"

[dependencies.lz4]
version="1"
optional=true

[profile.release]
lto=true
