[package]
name = "hpk"
version = "0.3.11"
description = "HPK archiver for Haemimont Engine game files (Tropico 3-5, Omerta, Victor Vran, Surviving Mars etc.)"
readme = "README.md"
repository = "https://github.com/nickelc/hpk"
license = "GPL-3.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["archive", "hpk"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.70.0"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
lz4frame = ["lz4"]

[lib]
name = "hpk"
path = "src/hpk/mod.rs"

[[bin]]
name = "hpk"
path = "src/main.rs"

[dependencies]
byteorder = "1"
filetime = "0.2"
flate2 = "1"
glob="0.3"
lz4-compress="0.1"
walkdir="2"
tempfile="3"
zstd = "0.12"

[dependencies.nom]
version = "7.1"
default-features = false

[dependencies.clap]
default-features = false
features = ["std", "cargo", "help", "usage", "error-context"]
version = "4.2"

[dependencies.lz4]
version="1"
optional=true

[profile.release]
lto=true
strip=true
